--- a/src/component/Portfolio/Portfolio.css
+++ b/src/component/Portfolio/Portfolio.css
@@ -22,3 +22,20 @@
 .portfolio .swiper{
     overflow: visible!important;
 }
+.portfolio-slider{
+    margin-top: 3rem;
+    width: 100%;
+}
+.portfolio-slider{
+    margin-top: 3rem;
+    width: 100%;
+}
+.portfolio-slider .swiper-slide{
+    width: 20rem;
+}
+.portfolio img{
+    width: 19rem;
+    filter: drop-shadow(-12px 15px 13px rgba(0,0,0,0.25));
+    border-radius:19px
+    
+}
